# AxiomMe

./: .gitignore  CHANGELOG.md  Cargo.toml  OM.md  OM2.md  README.md  process-compose.yaml
crates/: README.md
crates/axiomme-cli/: Cargo.toml  README.md
crates/axiomme-cli/src/: main.rs  web.rs
crates/axiomme-cli/src/cli/: args.rs  benchmark.rs  document.rs  mod.rs  queue.rs  release.rs  security.rs  tests.rs
crates/axiomme-cli/src/commands/: handlers.rs  mod.rs  ontology.rs  queue.rs  support.rs  tests.rs  validation.rs  web.rs
crates/axiomme-cli/tests/: process_contract.rs
crates/axiomme-core/: Cargo.toml  README.md  TEST_INTENT.md
crates/axiomme-core/src/: catalog.rs  client.rs  context_ops.rs  embedding.rs  error.rs  evidence.rs  fs.rs  host_tools.rs  index.rs  ingest.rs  lib.rs  mime.rs  models.rs  om_bridge.rs  pack.rs  parse.rs  qdrant.rs  quality.rs  queue_policy.rs  release_gate.rs  retrieval.rs  security_audit.rs  session.rs  state.rs  uri.rs
crates/axiomme-core/src/client/: benchmark_gate_service.rs  benchmark_logging_service.rs  benchmark_metrics_service.rs  benchmark_report_service.rs  benchmark_run_service.rs  benchmark_service.rs  eval_execution_service.rs  eval_golden_service.rs  eval_logging_service.rs  eval_report_service.rs  eval_service.rs  indexing.rs  indexing_service.rs  markdown_editor.rs  markdown_editor_service.rs  mirror_outbox.rs  mirror_outbox_service.rs  om_bridge.rs  om_bridge_service.rs  ontology.rs  queue_reconcile.rs  queue_reconcile_service.rs  relation.rs  relation_service.rs  release_benchmark_service.rs  release_evidence_service.rs  release_pack_service.rs  release_reliability_service.rs  release_security_service.rs  request_log.rs  request_log_service.rs  resource.rs  resource_service.rs  runtime.rs  runtime_service.rs  search_service.rs  tests.rs  trace_eval_service.rs  trace_metrics_service.rs  trace_replay_service.rs
crates/axiomme-core/src/client/benchmark/: gate_service.rs  logging_service.rs  mod.rs  report_service.rs  run_service.rs  service.rs
crates/axiomme-core/src/client/eval/: execution_service.rs  golden_service.rs  logging_service.rs  mod.rs  report_service.rs  service.rs
crates/axiomme-core/src/client/indexing/: helpers.rs  tests.rs
crates/axiomme-core/src/client/indexing_service/: helpers.rs  tests.rs
crates/axiomme-core/src/client/mirror_outbox/: reflector.rs
crates/axiomme-core/src/client/mirror_outbox/reflector/: tests.rs
crates/axiomme-core/src/client/mirror_outbox_service/: reflector.rs
crates/axiomme-core/src/client/release/: benchmark_service.rs  evidence_service.rs  mod.rs  pack_service.rs  reliability_service.rs  security_service.rs
crates/axiomme-core/src/client/search/: backend.rs  backend_tests.rs  mod.rs  reranker.rs  result.rs
crates/axiomme-core/src/client/tests/: benchmark_suite_tests.rs  core_editor_retrieval.rs  eval_suite_tests.rs  initialization_lifecycle.rs  mod.rs  om_bridge_contract.rs  ontology_enqueue.rs  queue_reconcile_lifecycle.rs  relation_trace_logs.rs  release_contract_pack_tracemetrics.rs
crates/axiomme-core/src/client/trace/: eval_service.rs  metrics_service.rs  mod.rs  replay_service.rs
crates/axiomme-core/src/config/: indexing.rs  memory.rs  mod.rs  om.rs  search.rs
crates/axiomme-core/src/models/: benchmark.rs  defaults.rs  eval.rs  filesystem.rs  mod.rs  queue.rs  reconcile.rs  release.rs  search.rs  session.rs
crates/axiomme-core/src/om/: addon.rs  context.rs  mod.rs  model.rs  pipeline.rs  xml.rs
crates/axiomme-core/src/om/config/: input.rs  resolve.rs  tests.rs  validate.rs
crates/axiomme-core/src/om/model/: tests.rs
crates/axiomme-core/src/om/parse/: mod.rs  sections.rs  tests.rs  thread.rs  tokens.rs
crates/axiomme-core/src/om/pipeline/: tests.rs
crates/axiomme-core/src/om/prompt/: formatter.rs  system.rs  tests.rs  user.rs
crates/axiomme-core/src/om/transform/: activation.rs  helpers.rs  scope.rs  types.rs
crates/axiomme-core/src/om/transform/observer/: candidates.rs  context.rs  decision.rs  synthesis.rs
crates/axiomme-core/src/om/transform/reflection/: decision.rs  draft.rs  guidance.rs  slice.rs
crates/axiomme-core/src/om/transform/tests/: mod.rs  observer.rs  reflection.rs
crates/axiomme-core/src/ontology/: mod.rs  pressure.rs
crates/axiomme-core/src/release_gate/: contract_probe.rs  episodic_semver.rs  policy.rs  test_support.rs  tests.rs
crates/axiomme-core/src/retrieval/: engine.rs  expansion.rs  planner.rs  scoring.rs  tests.rs
crates/axiomme-core/src/session/: commit.rs  indexing.rs  lifecycle.rs  memory.rs  memory_extractor.rs  mod.rs  om.rs  tests.rs
crates/axiomme-core/src/session/commit/: dedup.rs  mod.rs  promotion.rs  read_path.rs  resolve_path.rs  tests.rs  write_path.rs
crates/axiomme-core/src/session/om/: scope_binding.rs  tests.rs  write_path.rs
crates/axiomme-core/src/session/om/observer/: llm.rs  parsing.rs  record.rs  response.rs  threading.rs
crates/axiomme-core/src/state/: migration.rs  mod.rs  om.rs  queue.rs  queue_lane.rs  search.rs  tests.rs
crates/axiomme-core/src/state/om/: helpers.rs  scope.rs
crates/axiomme-core/tests/: core_contract_fixture.rs  om_parity_fixtures.rs  om_runtime_behavior_validation.rs  release_contract_fixture.rs
crates/axiomme-core/tests/fixtures/: parity_cases.json  release_contract_fixture.json
crates/axiomme-mobile-ffi/: Cargo.toml  README.md
crates/axiomme-mobile-ffi/src/: lib.rs
crates/axiomme-web/: Cargo.toml  README.md
crates/axiomme-web/src/: dto.rs  error.rs  handlers.rs  html.rs  lib.rs  markdown.rs  security.rs
crates/axiomme-web/src/tests/: document.rs  filesystem.rs  harness.rs  markdown.rs  mod.rs  recovery.rs  security.rs
crates/axiomme-web/src/ui/: index.css  index.html  index.js
docs/: API_CONTRACT.md  ARCHITECTURE.md  BUILD_ARTIFACT_CONTROL.md  ENGINEERING_PLAYBOOK_2026-02-23.md  FEATURE_COMPLETENESS_UAT_GATE_2026-02-26.md  FEATURE_SPEC.md  IMPLEMENTATION-PLAN.md  (+32 more)
(+44 files in other folders)
