[workspace]
members = [
    "crates/axiomme-core",
    "crates/axiomme-cli",
    "crates/axiomme-web",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.1"
license = "Apache-2.0"
authors = ["axient"]

[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
walkdir = "2.5.0"
globset = "0.4.16"
blake3 = "1.8.2"
zip = "4.3.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls", "json"] }
tempfile = "3.21.0"
clap = { version = "4.5.41", features = ["derive"] }
axum = "0.8.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net"] }
pulldown-cmark = "0.13.0"
tower = { version = "0.5.2", features = ["util"] }
serde_norway = "0.9.42"
