[package]
name = "axiomme-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axiomme-core = { path = "../axiomme-core" }
axum = { workspace = true }
tokio = { workspace = true }
pulldown-cmark = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
