[package]
name = "axiomme-cli"
version = "0.1.1"
edition = "2024"
description = "Command-line interface for AxiomMe data runtime."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axiomme-core = { version = "0.1.1", path = "../axiomme-core", default-features = false, features = ["host-tools", "markdown-preview"] }

[dev-dependencies]
tempfile = { workspace = true }
