[package]
name = "axiomme-core"
version = "0.1.0"
edition = "2024"
description = "Core data-processing engine for AxiomMe local retrieval runtime."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
blake3 = { workspace = true }
zip = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
serde_yml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
