[package]
name = "axiomme-mobile-ffi"
version = "0.1.1"
edition = "2024"
description = "Mobile FFI boundary for AxiomMe core runtime."
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "axiomme_mobile_ffi"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
axiomme-core = { version = "0.1.1", path = "../axiomme-core", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
